[package]
name = "ter_menu"
version = "0.1.4"
edition = "2024"
authors = ["wangtianjian <OrdinaryDay21@outlook.com>"]
description = "A terminal-based interactive dropdown selection component"
homepage = "https://github.com/ordinaryday-my/ter_menu"
repository = "https://github.com/ordinaryday-my/ter_menu.git"
license = "MIT"
keywords = ["terminal", "dropdown", "cli"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.29.0"